--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand"><%= link_to "水しるべ調査", root_path, id:"logo" %></a>
+      <%= link_to "水しるべ調査", root_path, id:"logo" %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -18,7 +18,7 @@
         <li><%= link_to "Log out", logout_path, method: "delete" %></li>
       </ul>
       <% else %>
-      <li><%= link_to "Log in", login_path %></li>
+      <li><%= link_to "Log in", login_path %></li></ul>
       <% end %>
     </div><!--/.nav-collapse -->
   </div>
