--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,17 +1,21 @@
-<%= form_for(@survey) do |f| %>
-  <% if @survey.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@survey.errors.count, "error") %> prohibited this survey from being saved:</h2>
 
-      <ul>
-      <% @survey.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
+<%= form_for @survey, html: { class: "form-horizontal", role: "form" } do |f| %>
+<div class="form-group">
+  <%= f.label :name, class: "col-sm-4 control-label" %>
+  <div class="col-sm-8">
+    <%= f.text_field :name, class: "form-control", placeholder: "例：平成27年度七戸川調査" %>
   </div>
+</div>
+<div class="form-group">
+  <%= f.label :file, class: "col-sm-4 control-label" %>
+  <div class="col-sm-8">
+    <%= f.file_field :file, class: "form-control" %>
+  </div>
+</div>
+<div class="form-group">
+  <div class="col-sm-offset-4 col-sm-8">
+    <%= f.submit "データセットを登録", class: "btn btn-primary" %>
+  </div>
+</div>
 <% end %>
+
