--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,14 +7,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "水しるべ調査", root_path, id:"logo" %>
+      <%= link_to "水しるべ調査", root_path, id: "logo" %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
-        <li><%= link_to "Profile", user_path %></li>
+        <li><%= link_to "Profile", user_path(current_user) %></li>
         <li><%= link_to "Log out", logout_path, method: "delete" %></li>
       </ul>
       <% else %>
