--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,13 @@
       
         <%= yield %>
     </div>
-      <script src="http://maps.googleapis.com/maps/api/js?sensor=true" type="text/javascript"></script>
-    <%= javascript_include_tag "google-maps.js"%>
+      <%= javascript_include_tag "markerclusterer.js" %>
+      <%= javascript_include_tag "google-maps.js"%>
+      
+
+      <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMsBxzOenULagu53wr6PfNp9lzD67OWSs&callback=initMap">
+      </script>
 
   </body>
 </html>
