--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,14 +11,14 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "ホーム", root_path %></li>
+        <li><%= link_to "ヘルプ", help_path %></li>
         <% if logged_in? %>
-        <li><%= link_to "Profile", user_path(current_user) %></li>
-        <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+        <li><%= link_to "アカウント", user_path(current_user) %></li>
+        <li><%= link_to "ログアウト", logout_path, method: "delete" %></li>
       </ul>
       <% else %>
-      <li><%= link_to "Log in", login_path %></li></ul>
+      <li><%= link_to "ログイン", login_path %></li></ul>
       <% end %>
     </div><!--/.nav-collapse -->
   </div>
