--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,3 +1,3 @@
-Hi <%= @user.name %>,
-Welcome to the Sample App! Click on the link below to activate your account:
+こんにちは,<%= @user.name %> さん
+水しるべ調査アプリにご登録頂きありがとうございます。以下のリンクをクリックしてアカウントの有効化を行ってください。
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
