--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,12 +1,7 @@
-<h1>Password reset</h1>
+<h1>パスワードのリセット</h1>
 
-<p>To reset your password click the link below:</p>
+<p>以下のリンクをクリックしてパスワードをリセットしてください。	</p>
 
 <%= link_to "Reset password", edit_password_reset_url(@user.reset_token,email: @user.email) %>
 
-<p>This link will expire in two hours.</p>
-
-<p>
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
-</p>
+<p>このリンクの有効期限は2時間です。</p>
