--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,8 +1,5 @@
-To reset your password click the link below:
+以下のリンクをクリックしてパスワードをリセットしてください。
 
-<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
+<%= link_to "Reset password", edit_password_reset_url(@user.reset_token,email: @user.email) %>
 
-This link will expire in two hours. 
-
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+このリンクの有効期限は2時間です。
