--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,3 @@
-<%= @user.name %>, <%= @user.email %>
+お名前：<%= @user.name %><br>
+メールアドレス：<%= @user.email %><br>
+<%= link_to "アカウントの編集", edit_user_path %>
