データ登録ページの更新

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,9 @@
 <div id="help">
 	<h1>ヘルプ</h1>
-	<p>このページはヘルプページです。</p>
+	<h2>データの登録方法</h2>
+	<ol>
+		<li>データの作り方ページを見てCSVデータを作る。</li>
+		<li>画面上部の[データ登録]をクリック</li>
+		<li>調査名を記入し、CSVデータを指定し、[データセットを登録]をクリック</li>
+	</ol>
 </div>
