how_to_createのパスを通す

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,7 +2,7 @@
 	<h1>ヘルプ</h1>
 	<h2>データの登録方法</h2>
 	<ol>
-		<li>データの作り方ページを見てCSVデータを作る。</li>
+		<li><%= link_to "データセットの作り方", how_to_create_surveys_path %>を見てCSVデータを作る。</li>
 		<li>画面上部の[データ登録]をクリック</li>
 		<li>調査名を記入し、CSVデータを指定し、[データセットを登録]をクリック</li>
 	</ol>
