how_to_createページの編集

--- a/app/views/surveys/how_to_create.html.erb
+++ b/app/views/surveys/how_to_create.html.erb
@@ -1,11 +1,13 @@
 <% provide(:title, 'データセットの作り方') %>
 <h1><%= yield(:title) %></h1>
 
-<li>
-	<h3>1.テンプレートファイルをダウンロード</h3>
-	<p><a href="/template.xlsx">Microsoft Excelのテンプレートをダウンロード</p>
-</li>
-<li>
-	<h3>2.テンプレートファイルへ値を入力</h3>
-	<p></p>
-</li>
+<ul>
+	<li>
+		<h3>1.テンプレートファイルをダウンロード</h3>
+		<p><a href="/template.xlsx">Microsoft Excelのテンプレートをダウンロード</a></p>
+	</li>
+	<li>
+		<h3>2.テンプレートファイルへ値を入力</h3>
+		<p></p>
+	</li>
+</ul>
