--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -2,6 +2,6 @@
 
 <p>以下のリンクをクリックしてパスワードをリセットしてください。	</p>
 
-<%= link_to "Reset password", edit_password_reset_url(@user.reset_token,email: @user.email) %>
+<%= link_to "パスワードをリセットする", edit_password_reset_url(@user.reset_token,email: @user.email) %>
 
 <p>このリンクの有効期限は2時間です。</p>
