--- a/app/views/surveys/how_to_create.html.erb
+++ b/app/views/surveys/how_to_create.html.erb
@@ -1,23 +1,24 @@
 <% provide(:title, 'データセットの作り方') %>
 <h1><%= yield(:title) %></h1>
-
-<ul　id="howtocreate">
-	<li>
-		<h3>1.テンプレートファイルをダウンロード</h3>
-		<p><a href="/template.xlsx">Microsoft Excelのテンプレートをダウンロード</a></p>
-	</li>
-	<li>
-		<h3>2.テンプレートファイルへ値を入力</h3>
-		<p>登録する項目名(調査地点名、調査代表者名など)の下に情報を書き込みます。水環境健全性指標の質問項目の下には調査結果の数値を書き込んでください。</p>
-	</li>
-	<li>
-		<h3>3.値の書式設定を変更</h3>
-		<p>書き込んだ行を選択し、右クリックし、[セルの書式設定]を選択します。そして、書式を標準に設定します。</p>
-	</li>
-	<li>
-		<h3>4.テンプレートファイルの保存</h3>
-		<p>[ファイル]→[名前をつけて保存]を選びます。<br>
-		「ファイル形式」を「CSV(コンマ区切り)(.csv)」、「名前」を「XXX.csv」(XXXは好きな名前)にして「保存」します。<br>
-		そのとき、「このブックには、選択したファイル形式で保存した場合に動作しない、または削除される可能性のある機能が含まれています。続行しますか？」と聞かれたら、「続行」をクリック。</p>
-	</li>
-</ul>
+<div　id="howtocreate">
+	<ol>
+		<li>
+			<h3>テンプレートファイルをダウンロード</h3>
+			<p><a href="/template.xlsx">Microsoft Excelのテンプレートをダウンロード</a></p>
+		</li>
+		<li>
+			<h3>テンプレートファイルへ値を入力</h3>
+			<p>登録する項目名(調査地点名、調査代表者名など)の下に情報を書き込みます。水環境健全性指標の質問項目の下には調査結果の数値を書き込んでください。</p>
+		</li>
+		<li>
+			<h3>値の書式設定を変更</h3>
+			<p>書き込んだ行を選択し、右クリックし、[セルの書式設定]を選択します。そして、書式を標準に設定します。</p>
+		</li>
+		<li>
+			<h3>テンプレートファイルの保存</h3>
+			<p>[ファイル]→[名前をつけて保存]を選びます。<br>
+			「ファイル形式」を「CSV(コンマ区切り)(.csv)」、「名前」を「XXX.csv」(XXXは好きな名前)にして「保存」します。<br>
+			そのとき、「このブックには、選択したファイル形式で保存した場合に動作しない、または削除される可能性のある機能が含まれています。続行しますか？」と聞かれたら、「続行」をクリック。</p>
+		</li>
+	</ol>
+</div>
