--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,6 +1,28 @@
-<h1>Editing Survey</h1>
+<h1>調査の編集</h1>
 
-<%= render 'form' %>
+
+<%= form_for @survey, html: { class: "form-horizontal", role: "form" } do |f| %>
+<div class="form-group">
+  <%= f.label :name, class: "col-sm-4 control-label" %>
+  <div class="col-sm-8">
+    <%= f.text_field :name, class: "form-control", placeholder: "例：平成27年度七戸川調査" %>
+  </div>
+</div>
+<div class="form-group">
+  <%= f.label :file, class: "col-sm-4 control-label" %>
+  <div class="col-sm-8">
+    <%= f.file_field :file, class: "form-control" %>
+  </div>
+</div>
+<div class="form-group">
+  <div class="col-sm-offset-4 col-sm-8">
+    <%= f.submit "データセットを更新", class: "btn btn-primary" %>
+  </div>
+</div>
+<% end %>
+
+
+
 
 <%= link_to 'Show', @survey %> |
 <%= link_to 'Back', surveys_path %>
