--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,20 @@
 お名前：<%= @user.name %><br>
 メールアドレス：<%= @user.email %><br>
 <%= link_to "アカウントの編集", edit_user_path %>
+
+<% if @user.surveys.any? %>
+	<h4>登録している調査数 <%= @surveys.count %> 件</h4>
+	<table>
+    <tr>
+        <th>登録している調査名</th>
+    </tr>
+    <tr>
+        <% @surveys.each do |survey| %>
+            <td><%= link_to survey.name, controller: "surveys", action: "show", id: survey.id %></td>
+        <% end %>
+    </tr>
+</table>
+
+
+
+<% end %>
