--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,7 +7,7 @@ header{
 }
 .container{
 	min-width: 600px;
-	font-size: 20px;
+	font-size: 30px;
 }
 .navbar-header{
 	font-size: 28px;
@@ -36,10 +36,30 @@ header{
 }
 
 #howtocreate{
-	.h3{
+	h3{
 		font-size: 25px;
 	}
-	.p{
+	p{
 		font-size: 20px;
 	}
+}
+
+#data_show{
+	table{
+		bgcolor: black;
+	}
+}
+
+#data-group{
+	min-width: 600px;
+}
+.key{
+	padding-left: 20px;
+}
+.value{
+	width: 10%;
+	padding-right: 20px;
+}
+#data-edit-group{
+	margin-bottom: 30px;
 }
