--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,28 +1,17 @@
 
 <h1>Listing Surveys</h1>
 
-<table>
-  <thead>
+<table width="80%">
+  <% @surveys.each do |survey| %>
     <tr>
-      <th colspan="3"></th>
+      <td><%= survey.name %></td>
+      <td><%= link_to '調査名を見る', survey %></td>
+      <td><%= link_to '調査を編集する', edit_survey_path(survey) %></td>
+      <td><%= link_to '調査を削除', survey, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
-  </thead>
-
-  <tbody>
-    <% @surveys.each do |survey| %>
-      <tr>
-        <td><%= link_to survey.id, survey_path(survey) %></td>
-        <td><%= survey.user_id %></td>
-        <td><%= survey.name %></td>
-        <td><%=l survey.created_at %></td>
-        <td><%= link_to 'Show', survey %></td>
-        <td><%= link_to 'Edit', edit_survey_path(survey) %></td>
-        <td><%= link_to 'Destroy', survey, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+  <% end %>
 </table>
 
 <br>
 
-<%= link_to 'New Survey', new_survey_path %>
+<%= link_to '調査を登録する', new_survey_path %>
