時間の表示のヘルパーの作成

--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -14,7 +14,7 @@
         </tr>
         <tr>
             <td class="key">調査日時</td>
-            <td class="value"><%= @datum.date %></td>
+            <td class="value"><%= show_at(@datum.date) %></td>
         </tr>
         <tr>
             <td class="key">天気</td>
