--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div id="user_show">
+<h1>アカウント情報</h1>
 <p>お名前：<%= @user.name %></p>
 <p>メールアドレス：<%= @user.email %></p>
 <p><%= link_to "アカウントの編集", edit_user_path %></p>
