--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMsBxzOenULagu53wr6PfNp9lzD67OWSs&callback=initMap" >
       </script>    
     -->
-<%= javascript_include_tag "http://d3js.org/d3.v3.min.js" %>
+<%= javascript_include_tag "https://d3js.org/d3.v3.min.js" %>
       
 
       <script
