--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -24,5 +24,5 @@
 
 
 
-<%= link_to 'Show', @survey %> |
-<%= link_to 'Back', surveys_path %>
+<%= link_to '調査へ戻る', @survey %> |
+<%= link_to '調査一覧へ戻る', surveys_path %>
